--- a/test/v2-java-helm-complete-test/helm/Chart.yaml
+++ b/test/v2-java-helm-complete-test/helm/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
-name: devops-java-springboot-color-bar-latest
+name: v2-java-helm-complete-test
 description: An example application with Java spring boot
 type: application
 version: 1.0.0
 appVersion: 1.0.0
 dependencies:
 - name: microservice-chart
-  version: 2.3.0
-  repository: file://../../../charts/microservice-chart
+  version: 2.8.0
+  repository: https://pagopa.github.io/aks-microservice-chart-blueprint
