updated basic test

--- a/test/v5-java-helm-basic-test/helm/Chart.yaml
+++ b/test/v5-java-helm-basic-test/helm/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
-name: devops-java-springboot-color-bar
+name: v5-java-helm-basic-test
 description: An example application with Java spring boot
 type: application
 version: 1.0.0
 appVersion: 1.0.0
 dependencies:
 - name: microservice-chart
-  version: 3.0.0
+  version: 4.1.0
   repository: file://../../../charts/microservice-chart
