--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -163,7 +163,7 @@ autoscaling:
   cooldownPeriod: 300 # seconds
   # -- Autoscaling triggers as per [Keda scalers](https://keda.sh/docs/2.6/scalers/)
   triggers: []
-  # -- Autoscaling advanced https://keda.sh/docs/2.9/concepts/scaling-deployments/#advanced
+  # -- Autoscaling advanced <https://keda.sh/docs/2.9/concepts/scaling-deployments/#advanced>
   advanced: {}
   #- advanced:
   #-  restoreToOriginalReplicaCount: false # Optional. Default: false
@@ -206,7 +206,7 @@ service:
 ingress:
   # -- (bool) Create or not the ingress manifest
   create: false
-  # -- Hostname for the ingress like https://idpay.pagopa.it
+  # -- Hostname for the ingress like <https://idpay.pagopa.it>
   host: ""
   # -- (int) service port to reach
   servicePort: 8080
