Added action release manual

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           yq -i ".version = \"${{ steps.semantic.outputs.new_release_version }}\"" "charts/microservice-chart/Chart.yaml"
           git add "charts/microservice-chart/Chart.yaml"
-          git commit -m "Bumb microservice chart version ${{ steps.semantic.outputs.new_release_version }}"
+          git commit -m "Bump microservice chart version ${{ steps.semantic.outputs.new_release_version }}"
           git push -u origin main
 
       - name: Setup Helm
